--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.20.0",
     "pytest-timeout>=2.4.0",
-    "mcp[stdio]>=0.1.0",
+    "mcp==1.9.4",
     "ruff>=0.0.270",
     "psutil>=7.0.0",
     "llamafirewall>=1.0.3"
