--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,15 +77,19 @@ select = ["ALL"]
 # D203 and D213 are incompatible with D211 and D212 respectively.
 # COM812 and ISC001 can cause conflicts when using ruff as a formatter.
 # See https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules.
-ignore = ["D203", "D213", "COM812", "ISC001"]
+ignore = ["D203", "D213", "COM812", "ISC001", "ANN101"]
 
 [tool.ruff.lint.per-file-ignores]
-"src/contextprotector/_cli.py" = [
+"**/*_cli.py" = [
     "T201", # allow `print` in cli module
 ]
 "test/**/*.py" = [
     "D",    # no docstrings in tests
     "S101", # asserts are expected in tests
+    "T201", # allow `print` in tests
+]
+"src/contextprotector/__main__.py" = [
+    "T201", # allow `print` in main module
 ]
 [tool.interrogate]
 # don't enforce documentation coverage for packaging, testing, the virtual
