--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,7 @@ select = ["ALL"]
 # D203 and D213 are incompatible with D211 and D212 respectively.
 # COM812 and ISC001 can cause conflicts when using ruff as a formatter.
 # See https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules.
-ignore = ["D203", "D213", "COM812", "ISC001", "ANN101"]
+ignore = ["D203", "D213", "COM812", "ISC001", "ANN101", "ANN102"]
 
 [tool.ruff.lint.per-file-ignores]
 "**/*_cli.py" = [
@@ -89,6 +89,8 @@ ignore = ["D203", "D213", "COM812", "ISC001", "ANN101"]
     "T201", # allow `print` in tests
     "PLR2004", # allow "magic numbers" in tests
     "SLF001",  # allow private member access in tests
+    "PLW0603", # allow global variables
+    "PLW0602", # allow global variables
 ]
 "src/contextprotector/__main__.py" = [
     "T201", # allow `print` in main module
