Modernize project infrastructure and CI/CD
Major improvements to project tooling and CI/CD:

GitHub Actions:
- Combined test and lint workflows into single CI workflow
- Updated Python version requirements (3.11 minimum, test 3.11-3.13)
- Added dependency caching for faster CI runs
- Added concurrency controls to cancel in-progress runs
- Added path filters to prevent unnecessary workflow runs
- Added timeouts to prevent stuck jobs

Python packaging:
- Migrated from legacy [project.optional-dependencies] to modern [dependency-groups]
- Fully adopted uv package manager (removed pip artifacts)
- Updated ruff from 0.6.2 to 0.12.7 for improved checks
- Removed mypy (118 unfixed errors, not actually enforced in CI)
- Moved pytest config from pytest.ini to pyproject.toml
- Added managed=true to [tool.uv] for full uv management

Code improvements (from newer ruff):
- Updated datetime.timezone.utc to datetime.UTC (Python 3.11+)
- Fixed code formatting in test files
- Added __hash__ methods to dataclasses with custom __eq__
- Fixed line length issues

Configuration cleanup:
- Removed duplicate dependency definitions
- Cleaned up Makefile to use uv sync instead of pip
- Added proper ignore rules for intentional patterns
- Consolidated all configuration in pyproject.toml

--- a/.github/workflows/zizmor.yml
+++ b/.github/workflows/zizmor.yml
@@ -3,10 +3,17 @@ name: GitHub Actions Security Analysis with zizmor 🌈
 on:
   push:
     branches: ["main"]
+    paths:
+      - '.github/workflows/**'
   pull_request:
-    branches: ["**"]
+    paths:
+      - '.github/workflows/**'
 
 permissions: {}
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   zizmor:
