--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,4 +82,4 @@ jobs:
       - name: Run tests
         run: |
           uv run pytest --cov=contextprotector
-          uv run coverage report -m
+          uv run coverage report -m --fail-under 55
